@@ -18,6 +18,8 @@ server "Freenode" {
     bind 0.0.0.0;
     # Identify to auth services via PRIVMSG.
     idstr "PRIVMSG NickServ :IDENTIFY moocow12345";
+    # Modes on connect.
+    modes "+B";
     # Single-line channel auto-join.
     ajoin "#freenode,#somebot";
 }
@@ -40,6 +42,8 @@ server "Thinstack" {
     bind 0.0.0.0;
     # Identify to auth services via an alias.
     idstr "NS IDENTIFY moocow12345";
+    # Modes on connect.
+    modes "+B";
     # Multi-line channel auto-join.
     ajoin "#xelhua";
     ajoin "#somebot";
